笔记-树结构

--- a/冷知识.md
+++ b/冷知识.md
@@ -1,4 +1,17 @@
-## localhost和127.0.0.1的区别是什么？
+
+
+# 工具、插件
+
+插件下载网址：极简插件。
+
+## git插件
+gitlens：历史记录提示
+
+# 浏览器网络请求
+
+浏览器本来就会限制请求的并发，谷歌一次只让并发同时发送6个请求
+
+# localhost和127.0.0.1的区别是什么？
 
 localhost是本机域名，127.0.0.1是本机IP地址，localhost通过host文件会自动解析到127.0.0.1
 
