--- a/冷知识.md
+++ b/冷知识.md
@@ -2,6 +2,16 @@
 
 # 工具、插件
 
+### 论坛
+
+1.[https://linux.do/](https://linux.do/)
+
+
+
+### 模拟假数据
+
+网站jsonplaceholder：[https://jsonplaceholder.typicode.com/guide/](https://jsonplaceholder.typicode.com/guide/)
+
 插件下载网址：极简插件。
 
 ## git插件
